# checksame

./: CREDITS.html  CREDITS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
checksame/: Cargo.toml
checksame/src/: main.rs
release/completions/: checksame.bash
release/man/: checksame.1
src/: error.rs  hash.rs  main.rs
