[package]
name = "checksame"
version = "0.4.5"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
description = "Generate single Blake3 hashes from any number of files or directories."
repository = "https://github.com/Blobfolio/checksame"
readme = "README.md"
publish = false
exclude = [
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
	"release",
]

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2024, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
extended-description = """\n\
CheckSame is a recursive, cumulative Blake3 file hasher for x86-64 Linux machines.\n\
.\n\
By default, this hash is simply printed to STDOUT.\n\
.\n\
However, when run with `-c` or `--cache`, the resulting hash will be stored and compared against the previous run."""
revision = "1"
depends = "$auto"
section = "utils"
assets = [
    ["./target/release/checksame", "usr/bin/", "755"],
    ["./release/completions/checksame.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/checksame.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "CheckSame"
bash-dir = "./release/completions"
man-dir = "./release/man"
credits-dir = "./"

[[package.metadata.bashman.switches]]
short = "-c"
long = "--cache"
description = "Cache the hash and output the status."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
long = "--reset"
description = "Reset any previously-saved hash keys before starting."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths to checksum from this text file — or STDIN if '-' — one entry per line, instead of or in addition to specifying <PATH(S)> at the end of the command."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[[package.metadata.bashman.sections]]
name = "OUTPUT"
inside = false
lines = [
	"By default, this will print a single 64-character Blake3 hash for the file(s) to STDOUT.",
	"In --cache mode, the hash will be cached and compared against the previous run. A value of -1, 0, or 1 will be printed instead, indicating NEW, UNCHANGED, or CHANGED, respectively."
]

[dependencies]
argyle = "0.7.*"
blake3 = "=1.5.0"
dowser = "0.8.*"
fyi_msg = "0.12.*"
rayon = "1.8.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[profile.release]
lto = true
codegen-units = 1
strip = true
