[package]
name = "checksame"
version = "0.1.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "CheckSame generates a single Blake3 hash from any number of files or directories."
# repository = "https://github.com/Blobfolio/checksame"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2020, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/checksame", "usr/bin/", "755"],
    ["../release/completions/checksame.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/checksame.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "CheckSame"
bash-dir = "../release/completions"
man-dir = "../release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
long = "--reset"
description = "Reset any previously-saved hash keys before starting."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
short = "-k"
long = "--key"
label = "KEY"
description = "Store checksum under this keyname for change detection."
path = false

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read file paths from this text file."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[dependencies]
blake3 = "0.3.*"

[dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies.fyi_msg]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies.fyi_witcher]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"
